fixed compiler and FindBugs warnings